update allianz demo

--- a/demo/2017_05_peko_allianz/css/fun.css
+++ b/demo/2017_05_peko_allianz/css/fun.css
@@ -1,1 +1,1 @@
-absCenter{position:absolute;top:0;left:0;right:0;bottom:0;margin:auto}
+absCenter{position:absolute;top:0;left:0;right:0;bottom:0;margin:auto}.align-center{text-align:center}a{outline:none}img{vertical-align:top}.clear{clear:both}.display_block{display:block}@-webkit-keyframes clock{from{-webkit-transform:rotate(0);transform:rotate(0)}to{-webkit-transform:rotate(-360deg);transform:rotate(-360deg)}}@keyframes clock{from{-webkit-transform:rotate(0);transform:rotate(0)}to{-webkit-transform:rotate(-360deg);transform:rotate(-360deg)}}
